k8s/manifests/jaeger/destination-rule.k8s.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: jaeger
  namespace: istio-system
spec:
  host: jaeger
  trafficPolicy:
    tls:
      mode: DISABLE
...
