k8s/manifests/jaeger/virtual-service.k8s.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger-vs
  namespace: istio-system
spec:
  hosts:
    - "jaeger.oswee.local"
  gateways:
    - jaeger-gateway
  http:
    - route:
        - destination:
            host: jaeger
            port:
              number: 14250
...
